<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

    <modelVersion>4.0.0</modelVersion>
    <groupId>org.neo4j</groupId>
    <packaging>pom</packaging>
    <version>5.3.0-SNAPSHOT</version>
    <artifactId>neo4j-connector-apache-spark_parent</artifactId>
    <name>neo4j-connector-apache-spark_parent</name>
    <description>Neo4j Connector for Apache Spark using the binary Bolt Driver</description>

    <modules>
        <module>common</module>
        <module>test-support</module>
        <module>spark-3</module>
    </modules>

    <organization>
        <name>Neo4j, Inc.</name>
        <url>http://neo4j.com/</url>
    </organization>
    <developers>
        <developer>
            <id>utnaf</id>
            <name>Davide Fantuzzi</name>
        </developer>
        <developer>
            <id>conker84</id>
            <name>Andrea Santurbano</name>
        </developer>
    </developers>

    <url>https://github.com/neo4j-contrib/neo4j-spark-connector</url>
    <scm>
        <url>https://github.com/neo4j-contrib/neo4j-spark-connector</url>
    </scm>
    <licenses>
        <license>
            <name>The Apache Software License, Version 2.0</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
            <comments>
                Note that this license is for the project itself,
                and not for its dependencies.
            </comments>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <properties>
        <neo4j.version>4.4.11</neo4j.version>
        <driver.version>4.4.12</driver.version>
        <neo4j.experimental>false</neo4j.experimental>
        <testcontainers.version>1.19.3</testcontainers.version>
        <xbean.version>4.10</xbean.version>
        <cypherdsl.version>2022.9.1</cypherdsl.version>
        <node.version>v12.16.0</node.version>
        <npm.version>6.13.7</npm.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <java.version>1.8</java.version>
        <spark.version>3.4.1</spark.version>
        <!-- This is empty because we use it for the deploy process -->
        <scala.binary.version/>
        <scala-maven-plugin.version>4.8.1</scala-maven-plugin.version>
    </properties>

    <profiles>
        <!-- scala profiles -->
        <profile>
            <id>scala-2.12</id>
            <properties>
                <scala.version>2.12.18</scala.version>
                <scala.binary.version>2.12</scala.binary.version>
            </properties>
        </profile>
        <profile>
            <id>scala-2.13</id>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
            <properties>
                <scala.version>2.13.12</scala.version>
                <scala.binary.version>2.13</scala.binary.version>
            </properties>
        </profile>
        <!-- end scala profiles -->
        <!-- spark profiles -->
        <!-- end spark profiles -->
        <!-- neo4j profiles -->
        <profile>
            <id>neo4j-4.4</id>
            <properties>
                <neo4j.version>4.4.19</neo4j.version>
                <neo4j.experimental>false</neo4j.experimental>
            </properties>
        </profile>
        <profile>
            <id>neo4j-5</id>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
            <properties>
                <neo4j.version>5.6.0</neo4j.version>
                <neo4j.experimental>false</neo4j.experimental>
            </properties>
        </profile>
        <!-- end neo4j profiles -->
    </profiles>

    <build>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
            </resource>
        </resources>
        <testResources>
            <testResource>
                <directory>src/test/resources</directory>
                <filtering>true</filtering>
            </testResource>
        </testResources>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>versions-maven-plugin</artifactId>
                    <version>2.16.2</version>
                    <configuration>
                        <generateBackupPoms>false</generateBackupPoms>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
        <plugins>
            <plugin>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.2.2</version>
                <configuration>
                    <forkCount>1</forkCount>
                    <reuseForks>false</reuseForks>
                    <includes>
                        <include>**/*Test.*</include>
                        <include>**/*IT.*</include>
                    </includes>
                    <trimStackTrace>false</trimStackTrace>
                    <!-- copied from https://github.com/apache/spark/blob/3941369d13ad885eac21bd8ac1769aaf1a325c5a/launcher/src/main/java/org/apache/spark/launcher/JavaModuleOptions.java -->
                    <argLine>
                        -XX:+IgnoreUnrecognizedVMOptions
                        --add-opens=java.base/java.lang=ALL-UNNAMED
                        --add-opens=java.base/java.lang.invoke=ALL-UNNAMED
                        --add-opens=java.base/java.lang.reflect=ALL-UNNAMED
                        --add-opens=java.base/java.io=ALL-UNNAMED
                        --add-opens=java.base/java.net=ALL-UNNAMED
                        --add-opens=java.base/java.nio=ALL-UNNAMED
                        --add-opens=java.base/java.util=ALL-UNNAMED
                        --add-opens=java.base/java.util.concurrent=ALL-UNNAMED
                        --add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED
                        --add-opens=java.base/sun.nio.ch=ALL-UNNAMED
                        --add-opens=java.base/sun.nio.cs=ALL-UNNAMED
                        --add-opens=java.base/sun.security.action=ALL-UNNAMED
                        --add-opens=java.base/sun.util.calendar=ALL-UNNAMED
                        --add-opens=java.security.jgss/sun.security.krb5=ALL-UNNAMED
                    </argLine>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.11.0</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                    <encoding>UTF-8</encoding>
                </configuration>
            </plugin>
            <plugin>
                <groupId>net.alchim31.maven</groupId>
                <artifactId>scala-maven-plugin</artifactId>
                <version>${scala-maven-plugin.version}</version>
                <executions>
                    <execution>
                        <id>scala-compile</id>
                        <goals>
                            <goal>add-source</goal>
                            <goal>compile</goal>
                            <goal>testCompile</goal>
                            <goal>doc-jar</goal>
                        </goals>
                        <phase>process-resources</phase>
                    </execution>
                    <execution>
                        <id>scala-test-compile</id>
                        <goals>
                            <goal>testCompile</goal>
                        </goals>
                        <phase>test-compile</phase>
                    </execution>
                </executions>
                <configuration>
                    <scalaVersion>${scala.version}</scalaVersion>
                    <scalaCompatVersion>${scala.binary.version}</scalaCompatVersion>
                    <args>
                        <arg>-target:jvm-1.8</arg>
                        <!-- arg>-deprecation</arg -->
                    </args>
                    <jvmArgs>
                        <jvmArg>-Xms64m</jvmArg>
                        <jvmArg>-Xmx1024m</jvmArg>
                    </jvmArgs>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-assembly-plugin</artifactId>
                <version>3.6.0</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>single</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <descriptorRefs>
                        <descriptorRef>jar-with-dependencies</descriptorRef>
                    </descriptorRefs>
                    <finalName>${project.artifactId}-${project.version}</finalName>
                    <appendAssemblyId>false</appendAssemblyId>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>3.3.0</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <dependencies>
        <dependency>
            <groupId>org.scala-lang</groupId>
            <artifactId>scala-library</artifactId>
            <version>${scala.version}</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>org.scala-lang</groupId>
            <artifactId>scala-reflect</artifactId>
            <version>${scala.version}</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>org.neo4j.driver</groupId>
            <artifactId>neo4j-java-driver</artifactId>
            <version>${driver.version}</version>
        </dependency>

        <!-- this is necessary because the version bundled with Apache spark does not support Java 11 -->
        <dependency>
            <groupId>org.apache.xbean</groupId>
            <artifactId>xbean-asm6-shaded</artifactId>
            <version>${xbean.version}</version>
        </dependency>

        <dependency>
            <groupId>org.apache.spark</groupId>
            <artifactId>spark-core_${scala.binary.version}</artifactId>
            <version>${spark.version}</version>
            <scope>provided</scope>
            <exclusions>
                <exclusion>
                    <groupId>org.apache.xbean</groupId>
                    <artifactId>xbean-asm6-shaded</artifactId>
                </exclusion>
                <!-- uncomment for debug -->
                <!--<exclusion>
                    <groupId>org.slf4j</groupId>
                    <artifactId>slf4j-log4j12</artifactId>
                </exclusion>-->
            </exclusions>
        </dependency>

        <dependency>
            <groupId>org.apache.spark</groupId>
            <artifactId>spark-sql_${scala.binary.version}</artifactId>
            <version>${spark.version}</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>org.neo4j</groupId>
            <artifactId>neo4j-cypher-dsl</artifactId>
            <version>${cypherdsl.version}</version>
        </dependency>

        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.13.2</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.hamcrest</groupId>
            <artifactId>hamcrest</artifactId>
            <version>2.2</version>
            <scope>test</scope>
        </dependency>
        <!-- uncomment for debug -->
        <!--<dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-simple</artifactId>
            <version>1.7.30</version>
            <scope>test</scope>
        </dependency>-->
    </dependencies>

    <repositories>
        <repository>
            <id>spark-repo</id>
            <url>http://dl.bintray.com/spark-packages/maven/</url>
        </repository>
    </repositories>

</project>
